Correction probleme alignement product restaurant-style.css

--- a/styles/restaurant-style.css
+++ b/styles/restaurant-style.css
@@ -413,7 +413,6 @@ footer nav a i {
     .container-product {
         display: flex;
         flex-direction: row;
-        align-items: center;
         width: 100%;
         gap: 10px;
     }
